--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-0-5) nexenta; urgency=low
+
+  * Issue 4054: Backport important ip stack fixes
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 24 Feb 2011 00:20:13 -0500
+
 sunwckr (5.11.134-31-0-4) nexenta; urgency=low
 
   * Issue 2752: dD flags are missing
