--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-31-0-5) nexenta; urgency=low
+
+  * Issue 4054: Backport important ip stack fixes
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 24 Feb 2011 00:20:13 -0500
+
 sunwhea (5.11.134-31-0-4) nexenta; urgency=low
 
   * Issue 2399: Editing a file with vi strips inherited ACLs
